--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                       <input class="form-control me-2 rounded-pill  " type="search" placeholder="Search" aria-label="Search"> 
                       <a href="#" class="btn  btn-outline- border-0 my-search-button position-absolute" type="submit"><i class="bi  bi-search"></i></a>
                     </form>
-                    <ul class="navbar-nav ms-md-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-md-auto mb-2 mb-lg-0 fs-6 fw-normal">
                       <li class="nav-item px-2">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li>
